# AvaVKPlayer

./: .gitignore  AvaVKPlayer.sln  README.md
AvaVKPlayer/: App.axaml  App.axaml.cs  AvaVKPlayer.csproj  Program.cs  ViewLocator.cs
AvaVKPlayer/Converters/: DurationConverter.cs  EqualizerOffsetConverter.cs  RepostTypeConverter.cs
AvaVKPlayer/ETC/: Events.cs  ExtensionsMethods.cs  GlobalVars.cs  InvokeHandler.cs  LoadingControl.axaml  LoadingControl.axaml.cs  Player.cs  Utils.cs  WebElementServer.cs
AvaVKPlayer/Models/: AudioAlbumModel.cs  AudioModel.cs  Equalizer.cs  EqualizerPresset.cs  ImageModel.cs  RepostModel.cs  RepostToType.cs  SavedAccountModel.cs  SavedEqualizerData.cs
AvaVKPlayer/Notify/: INotifyControl.cs  NotifyControl.axaml  NotifyControl.axaml.cs  NotifyData.cs  NotifyManager.cs
AvaVKPlayer/Properties/: Language.Designer.cs  Language.resx  Language.ru.resx  ResourceProvider.cs
AvaVKPlayer/Styles/: ListBoxStyle.axaml
AvaVKPlayer/ViewModels/: AudioListButtonsViewModel.cs  EqualizerPresetMenagerViewModel.cs  EqualizerViewModel.cs  InputViewModel.cs  LoginControlViewModel.cs  LyricsViewModel.cs  MainWindowViewModel.cs  Player.cs  PlayerControlViewModel.cs  RepostViewModel.cs  VKLoginControlViewModel.cs
AvaVKPlayer/Views/: AddToAlbumView.axaml  AddToAlbumView.axaml.cs  AlbumListControl.axaml  AlbumListControl.axaml.cs  EQWindow.axaml  EQWindow.axaml.cs  ExceptionView.axaml  (+20 more)
WebElements/: .gitignore
WebElements/LinuxWebElement/: CMakeLists.txt  README.md
WebElements/LinuxWebElement/src/: browser.cpp  browser.hpp  main.cpp  tcp.cpp  tcp.hpp
(+179 files in other folders)
